# minimal_spectrum_analyzer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: Axis.hpp  Option.hpp  Renderer.hpp  SoundCapturer.hpp  SoundCapturerPulseAudio.hpp  SoundCapturerWASAPI.hpp  SpectrumAnalyzer.hpp  main.cpp
